# TF-Lite-Cpp-API-Android-Example

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/tflitecxx/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/tflitecxx/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/tflitecxx/: ExampleUnitTest.java
